# Platform

./: .env.example  .gitignore  CLAUDE.md  README.md  plan.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/scripts/: smoke_ws.py
backend/skills/upper/: run.py  skill.json
backend/src/: config.py  main.py
backend/src/agent/: loop.py
backend/src/api/: audit.py  auth.py  errors.py  jobs.py  llm.py  sessions.py  tools.py
backend/src/confirm/: engine.py
backend/src/llm/: provider.py  secrets.py
backend/src/models/: db.py  entities.py
backend/src/realtime/: manager.py  store.py  ws.py
backend/src/scheduler/: engine.py
backend/src/tools/: browser_tools.py  builtins.py  computer_tools.py  invoke.py  mcp_adapter.py  registry.py  skills_loader.py
backend/tests/contract/: test_mcp_adapter.py  test_tool_invoke_contract.py  test_ws_event_protocol.py
backend/tests/integration/: test_edge_cases.py
backend/tests/unit/: test_confirmation_gate.py  test_scheduler.py
docs/: runbook.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/components/: ActivityFeed.tsx  ConfirmationPrompt.tsx
frontend/src/pages/: Dashboard.tsx  LlmManagement.tsx  (+1 more)
specs/001-agent-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+6 files in other folders)
