[project]
name = "agent-platform-backend"
version = "0.1.0"
description = "Agent Platform backend — FastAPI, tools, scheduling, LLM management"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "apscheduler>=3.10",
    "mcp>=1.12",
    "playwright>=1.45",
    "cryptography>=43.0",
    "httpx>=0.27",
    "argon2-cffi>=23.1",
    "python-multipart>=0.0.9",
    "jsonschema>=4.23",
    "email-validator>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6", "httpx>=0.27"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
